Added maven-surefire-plugin in pom.xml file

--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,23 @@
     <artifactId>automation-framework</artifactId>
     <version>1</version>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.5.3</version>
+                    <configuration>
+                        <suiteXmlFile>
+                            src/test/java/testng/testng.xml
+                        </suiteXmlFile>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
